kubernetes/authelia/authelia-ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia-ingress
  namespace: cert-manager
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.admin.thelegend27.fr`)
      services:
        - name: authelia
          namespace: authelia
          port: 80

  tls:
    secretName: wildcard-admin-thelegend27-tls
